--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </h1>
         <p style={{ fontFamily: "'Grandiflora One', cursive" }} className="text-lg md:text-2xl text-gray-600 mt-2">Forest of Thoughts</p>
         <div className="text-6xl md:text-8xl my-8 animate-bounce">🌳</div>
-        <p className="text-xl md:text-2xl text-gray-700 mb-8">나만의 특별한 생각의 숲을 만들어보세요!</p>
+        <p className="text-xl md:text-2xl text-gray-700 mb-8">생각나무를 심어 생각의 숲을 만들다</p>
         <button
           onClick={() => setPage('select')}
           className="flex items-center gap-2 bg-gradient-to-r from-yellow-300 to-yellow-200 text-yellow-800 font-bold text-xl px-8 py-4 rounded-full shadow-lg hover:shadow-xl transition-all duration-300 transform hover:scale-105"
