--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
     };
 
     const CARD_COLORS = [
-      'hsl(0, 0%, 98%)',   // White
-      'hsl(60, 100%, 90%)',// Light Yellow
-      'hsl(120, 73%, 90%)',// Light Green
-      'hsl(200, 100%, 90%)',// Light Blue
-      'hsl(270, 100%, 95%)',// Light Purple
-      'hsl(340, 100%, 92%)',// Light Pink
+      'hsl(0, 0%, 98%)',
+      'hsl(60, 100%, 90%)',
+      'hsl(120, 73%, 90%)',
+      'hsl(200, 100%, 90%)',
+      'hsl(270, 100%, 95%)',
+      'hsl(340, 100%, 92%)',
     ];
 
     // --- 아이콘 컴포넌트 ---
@@ -65,6 +65,11 @@
         edit:      <path d="M17 3a2.85 2.83 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5Z"/>,
         check:     <path d="M20 6 9 17l-5-5" />,
         palette:   <><circle cx="13.5" cy="6.5" r=".5" fill="currentColor"/><circle cx="17.5" cy="10.5" r=".5" fill="currentColor"/><circle cx="8.5" cy="7.5" r=".5" fill="currentColor"/><circle cx="6.5" cy="12.5" r=".5" fill="currentColor"/><path d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10c.926 0 1.648-.746 1.648-1.667 0-.424-.163-.82-.437-1.125-.29-.32-1.04-.69-1.04-1.108v-1.166a2.153 2.153 0 0 0-1.042-1.875C10.658 14.85 9 13.84 9 12c0-1.84 1.658-2.85 2.116-3.125a2.153 2.153 0 0 0 1.042-1.875V6c0-.418.75-.788 1.04-1.108.274-.305.437-.701.437-1.125C13.648 2.746 12.926 2 12 2z"/></>,
+        copy:      <><rect x="9" y="9" width="13" height="13" rx="2"/><path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"/></>,
+        fileTxt:   <><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/><polyline points="14 2 14 8 20 8"/></>,
+        image:     <><rect x="3" y="3" width="18" height="18" rx="2"/><circle cx="8.5" cy="8.5" r="1.5"/><path d="m21 15-5-5L5 21"/></>,
+        fruit:     <><path d="M12 22c4.418 0 8-3.134 8-7 0-3.866-3.582-7-8-7s-8 3.134-8 7c0 3.866 3.582 7 8 7z"/><path d="M12 8s-1-4 3-5 5 3 5 3"/></>,
+        trash:     <><polyline points="3 6 5 6 21 6"/><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"/></>,
       };
       return (
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" className={className}>
@@ -255,10 +260,10 @@
       );
     };
 
-    // --- 나의 숲: 카드 내부만 좌측 정렬 + IME 안정 편집 + 삭제/되돌리기 ---
+    // --- 나의 숲 ---
     const ForestGalleryPage = ({ trees, setTrees, setPage }) => {
       const fileInputRef = useRef(null);
-      const [editingTree, setEditingTree] = useState(null); // { id }
+      const [editingTree, setEditingTree] = useState(null);
       const [undoTree, setUndoTree] = useState(null);
       const undoTimerRef = useRef(null);
 
@@ -357,12 +362,10 @@
         event.target.value = null;
       };
 
-      // --- 카드 컴포넌트 (★내부 전부 좌측 정렬) ---
       const TreeCard = ({ tree }) => {
         const treeInfo = TREE_TYPES[tree.type];
         const isEditing = editingTree && editingTree.id === tree.id;
 
-        // 로컬 드래프트 상태 (IME 안정)
         const [draft, setDraft] = useState({
           name: tree.name,
           trunkSummary: tree.trunkSummary || '',
@@ -383,15 +386,11 @@
           }
         }, [isEditing, tree.id]);
 
-        const composing = useRef(false);
-        const commitIfNotComposing = () => { /* no-op; 저장 버튼에서 커밋 */ };
-
         const [showPalette, setShowPalette] = useState(false);
         const colorPickerRef = useRef(null);
 
         return (
           <div id={`tree-${tree.id}`} style={{backgroundColor: tree.cardColor || 'white'}} className="relative rounded-2xl p-6 shadow-lg flex flex-col gap-4 text-left">
-            {/* 삭제 버튼 */}
             <button
               onClick={() => handleDelete(tree.id)}
               className="ui-only absolute top-2 right-2 text-gray-400 hover:text-red-600 font-bold text-lg"
@@ -408,10 +407,6 @@
                       type="text"
                       value={draft.name}
                       onChange={(e) => setDraft(d => ({ ...d, name: e.target.value }))}
-                      onCompositionStart={() => { composing.current = true; }}
-                      onCompositionEnd={(e) => { composing.current = false; setDraft(d => ({ ...d, name: e.target.value })); commitIfNotComposing(); }}
-                      onBlur={() => commitIfNotComposing()}
-                      autoFocus
                       className="text-xl font-bold text-gray-800 bg-white/50 rounded p-1 w-full border text-left"
                     />
                   ) : (
@@ -440,7 +435,6 @@
               )}
             </div>
 
-            {/* 색상 팔레트 */}
             {showPalette && (
               <div className="ui-only flex gap-2 items-center justify-center p-2 bg-black/10 rounded-full">
                 {CARD_COLORS.map(color => (
@@ -483,7 +477,7 @@
         <div className="w-full max-w-6xl mx-auto p-4">
           <div className="text-center mb-8 relative">
             <h2 className="text-4xl font-bold text-gray-800">생각의 숲</h2>
-            <p className="text-lg text-gray-600 mt-2">지금까지 내가 심은 생각 나무들</p>
+            <p className="text-lg text-gray-600 mt-2">지금까지 내가 심은 나무들</p>
             <div className="absolute top-0 right-0 flex gap-2">
               <button onClick={handleDownloadAll} title="전체 내려받기" className="ui-only bg-white/80 p-2 rounded-full shadow-md hover:bg-gray-100 transition">
                 <Icon name="download" className="w-6 h-6 text-gray-600"/>
@@ -532,6 +526,253 @@
       </div>
     );
 
+    // --- 열매맺기(논설문 쓰기) 페이지 ---
+    const FruitWritePage = () => {
+      const SLIDE_ID = "1yI4jdJCEnCzGNqEvdPtmfQjGQwmnPzrU6bGfIbpAq7g";
+      const slideEmbedUrl = `https://docs.google.com/presentation/d/${SLIDE_ID}/embed?start=false&loop=false&delayms=3000`;
+
+      const [essay, setEssay] = useState(() => {
+        try {
+          const saved = localStorage.getItem("fruitEssay");
+          return saved ? JSON.parse(saved) : { title: "", author: "", intro: "", body: "", conclusion: "" };
+        } catch { return { title: "", author: "", intro: "", body: "", conclusion: "" }; }
+      });
+
+      const containerRef = useRef(null);
+      const jsonInputRef = useRef(null);
+
+      useEffect(() => {
+        const t = setTimeout(() => {
+          localStorage.setItem("fruitEssay", JSON.stringify(essay));
+        }, 500);
+        return () => clearTimeout(t);
+      }, [essay]);
+
+      const onChange = (k) => (e) => setEssay((prev) => ({ ...prev, [k]: e.target.value }));
+
+      const buildTxt = () => {
+        return [
+          `제목: ${essay.title || ""}`,
+          `이름: ${essay.author || ""}`,
+          "",
+          "[서론]",
+          essay.intro || "",
+          "",
+          "[본론]",
+          essay.body || "",
+          "",
+          "[결론]",
+          essay.conclusion || "",
+        ].join("\n");
+      };
+
+      const exportTXT = () => {
+        const blob = new Blob([buildTxt()], { type: "text/plain;charset=utf-8" });
+        const url = URL.createObjectURL(blob);
+        const a = document.createElement("a");
+        a.href = url; a.download = `열매맺기_${(essay.title || "논설문").slice(0,30)}.txt`;
+        a.click();
+        URL.revokeObjectURL(url);
+      };
+
+      // 스크롤 무시하고 전체 내용 JPG로 출력 (버튼 제외)
+      const exportJPG = async () => {
+        if (typeof html2canvas === "undefined") {
+          alert("이미지 내보내기 모듈을 불러오는 중입니다. 잠시 후 다시 시도해주세요.");
+          return;
+        }
+        const src = containerRef.current;
+        if (!src) return;
+
+        const esc = (s="") =>
+          String(s)
+            .replace(/&/g, "&amp;").replace(/</g, "&lt;").replace(/>/g, "&gt;")
+            .replace(/"/g, "&quot;").replace(/'/g, "&#39;");
+        const br = (s="") => esc(s).replace(/\n/g, "<br/>");
+
+        const capture = document.createElement("div");
+        capture.style.position = "absolute";
+        capture.style.left = "-99999px";
+        capture.style.top = "0";
+        capture.style.width = src.offsetWidth ? src.offsetWidth + "px" : "900px";
+        capture.style.background = "#ffffff";
+        capture.style.fontFamily = "'Noto Sans KR', sans-serif";
+
+        capture.innerHTML = `
+          <div class="rounded-2xl shadow p-6" style="box-sizing:border-box;">
+            <div style="display:grid; grid-template-columns:1fr 1fr; gap:12px; margin-bottom:12px;">
+              <div style="border:1px solid #e5e7eb; border-radius:8px; padding:12px; font-weight:600;">${esc(essay.title)}</div>
+              <div style="border:1px solid #e5e7eb; border-radius:8px; padding:12px; font-weight:600;">${esc(essay.author)}</div>
+            </div>
+
+            <div style="margin-bottom:12px;">
+              <div style="font-size:12px; font-weight:700; color:#374151; margin-bottom:4px;">서론</div>
+              <div style="border:1px solid #e5e7eb; border-radius:8px; padding:12px; white-space:pre-wrap; line-height:1.6;">${br(essay.intro)}</div>
+            </div>
+
+            <div style="margin-bottom:12px;">
+              <div style="font-size:12px; font-weight:700; color:#374151; margin-bottom:4px;">본론</div>
+              <div style="border:1px solid #e5e7eb; border-radius:8px; padding:12px; white-space:pre-wrap; line-height:1.6;">${br(essay.body)}</div>
+            </div>
+
+            <div>
+              <div style="font-size:12px; font-weight:700; color:#374151; margin-bottom:4px;">결론</div>
+              <div style="border:1px solid #e5e7eb; border-radius:8px; padding:12px; white-space:pre-wrap; line-height:1.6;">${br(essay.conclusion)}</div>
+            </div>
+          </div>
+        `;
+        document.body.appendChild(capture);
+
+        try {
+          const canvas = await html2canvas(capture, { scale: 2, backgroundColor: "#ffffff" });
+          const a = document.createElement("a");
+          a.download = `열매맺기_${(essay.title || "논설문").slice(0,30)}.jpg`;
+          a.href = canvas.toDataURL("image/jpeg", 0.95);
+          a.click();
+        } finally {
+          document.body.removeChild(capture);
+        }
+      };
+
+      const copyAll = async () => {
+        try {
+          await navigator.clipboard.writeText(buildTxt());
+          alert("복사되었습니다!");
+        } catch {
+          alert("복사를 지원하지 않는 브라우저입니다.");
+        }
+      };
+
+      const downloadJSON = () => {
+        const data = `data:text/json;charset=utf-8,${encodeURIComponent(JSON.stringify(essay, null, 2))}`;
+        const a = document.createElement("a");
+        a.href = data; a.download = "열매맺기_essay.json"; a.click();
+      };
+      const importJSONClick = () => jsonInputRef.current?.click();
+      const importJSON = (e) => {
+        const file = e.target.files?.[0];
+        if (!file) return;
+        const reader = new FileReader();
+        reader.onload = (ev) => {
+          try {
+            const obj = JSON.parse(ev.target.result);
+            if (typeof obj === "object" && ["title","author","intro","body","conclusion"].every(k => k in obj)) {
+              setEssay(obj);
+              alert("불러오기가 완료되었습니다.");
+            } else {
+              alert("올바른 형식의 JSON이 아닙니다.");
+            }
+          } catch {
+            alert("JSON 파일을 읽는 데 실패했습니다.");
+          }
+        };
+        reader.readAsText(file);
+        e.target.value = null;
+      };
+
+      // 초기화 기능
+      const resetEssay = () => {
+        if (window.confirm("정말 내용을 모두 지우시겠습니까?")) {
+          const empty = { title: "", author: "", intro: "", body: "", conclusion: "" };
+          setEssay(empty);
+          localStorage.setItem("fruitEssay", JSON.stringify(empty));
+        }
+      };
+
+      return (
+        <div className="w-full max-w-6xl mx-auto p-4 animate-fade-in">
+          {/* 상단 바: 타이틀 + JSON 아이콘 */}
+          <div className="flex items-center justify-between mb-3">
+            <div>
+              <h2 className="text-3xl font-bold text-gray-800">열매맺기</h2>
+              <p className="text-gray-600">글쓰기로 나의 생각을 정리해보세요.</p>
+            </div>
+            <div className="flex items-center gap-2">
+              <button onClick={downloadJSON} title="JSON 다운로드" className="bg-white/80 p-2 rounded-full shadow hover:bg-gray-100 transition">
+                <Icon name="download" className="w-6 h-6 text-gray-700"/>
+              </button>
+              <button onClick={importJSONClick} title="JSON 업로드" className="bg-white/80 p-2 rounded-full shadow hover:bg-gray-100 transition">
+                <Icon name="upload" className="w-6 h-6 text-gray-700"/>
+              </button>
+              <input type="file" ref={jsonInputRef} accept=".json,application/json" className="hidden" onChange={importJSON}/>
+            </div>
+          </div>
+
+          {/* 구글 슬라이드 임베드 */}
+          <div className="mb-4">
+            <div className="relative w-full rounded-xl overflow-hidden shadow">
+              <div className="relative w-full" style={{ paddingTop: "56.25%" }}>
+                <iframe
+                  title="논제/작성법 안내"
+                  src={slideEmbedUrl}
+                  className="absolute inset-0 w-full h-full border-0"
+                  allowFullScreen
+                ></iframe>
+              </div>
+            </div>
+            <div className="text-right mt-1">
+              <a
+                href={`https://docs.google.com/presentation/d/${SLIDE_ID}/preview`}
+                className="text-sm text-gray-500 underline"
+                target="_blank" rel="noreferrer"
+                >슬라이드 새 창으로 열기</a>
+            </div>
+          </div>
+
+          {/* 폼 영역 (JPG 캡처 대상) */}
+          <div ref={containerRef} className="bg-white rounded-2xl shadow p-4 md:p-6 space-y-3">
+            <div className="grid md:grid-cols-2 gap-3">
+              <input value={essay.title} onChange={onChange("title")} placeholder="제목" className="w-full border rounded-lg p-3" />
+              <input value={essay.author} onChange={onChange("author")} placeholder="이름" className="w-full border rounded-lg p-3" />
+            </div>
+            <div>
+              <label className="text-sm font-semibold text-gray-700 block mb-1">서론</label>
+              <textarea
+                value={essay.intro}
+                onChange={onChange("intro")}
+                className="w-full border rounded-lg p-3 h-28 resize-y"
+                placeholder="주제를 간단히 소개하고 글을 쓰는 이유를 분명히 밝힙니다."
+              />
+            </div>
+            <div>
+              <label className="text-sm font-semibold text-gray-700 block mb-1">본론</label>
+              <textarea
+                value={essay.body}
+                onChange={onChange("body")}
+                className="w-full border rounded-lg p-3 h-48 resize-y"
+                placeholder="주장을 뒷받침하는 근거와 예시를 체계적으로 제시합니다."
+              />
+            </div>
+            <div>
+              <label className="text-sm font-semibold text-gray-700 block mb-1">결론</label>
+              <textarea
+                value={essay.conclusion}
+                onChange={onChange("conclusion")}
+                className="w-full border rounded-lg p-3 h-28 resize-y"
+                placeholder="본론을 요약하고 주장을 다시 한 번 강조합니다."
+              />
+            </div>
+
+            {/* 내보내기 (캡처에서 제외) */}
+            <div className="export-controls pt-2 flex flex-wrap gap-2 justify-end">
+              <button onClick={exportTXT} className="inline-flex items-center gap-2 px-4 py-2 rounded-full border bg-gray-50 hover:bg-gray-100">
+                <Icon name="fileTxt" className="w-5 h-5"/> TXT
+              </button>
+              <button onClick={exportJPG} className="inline-flex items-center gap-2 px-4 py-2 rounded-full border bg-gray-50 hover:bg-gray-100">
+                <Icon name="image" className="w-5 h-5"/> JPG
+              </button>
+              <button onClick={copyAll} className="inline-flex items-center gap-2 px-4 py-2 rounded-full border bg-gray-50 hover:bg-gray-100">
+                <Icon name="copy" className="w-5 h-5"/> 복사하기
+              </button>
+              <button onClick={resetEssay} className="inline-flex items-center gap-2 px-4 py-2 rounded-full border bg-red-50 hover:bg-red-100 text-red-600">
+                <Icon name="trash" className="w-5 h-5"/> 초기화
+              </button>
+            </div>
+          </div>
+        </div>
+      );
+    };
+
     // --- 메인 앱 컴포넌트 ---
     function App() {
       const [page, setPage] = useState('home');
@@ -564,6 +805,7 @@
           case 'create':  return <CreateTreePage treeType={selectedTree} onSave={handleSaveTree} setPage={setPage} />;
           case 'gallery': return <ForestGalleryPage trees={trees} setTrees={setTrees} setPage={setPage} />;
           case 'ourForest': return <OurForestPage />;
+          case 'essay': return <FruitWritePage />;
           case 'home':
           default:        return <HomePage setPage={setPage} />;
         }
@@ -594,6 +836,7 @@
             </a>
           </footer>
 
+          {/* 하단 네비: '열매맺기'를 '우리의 숲' 오른쪽으로 배치 */}
           <nav className="fixed bottom-0 left-0 right-0 bg-white/70 backdrop-blur-lg z-20">
             <div className="max-w-md mx-auto flex justify-around items-center h-16">
               <button onClick={() => setPage('home')} className={`flex flex-col items-center gap-1 transition-colors w-16 ${page === 'home' ? 'text-yellow-500' : 'text-gray-500 hover:text-yellow-500'}`}>
@@ -612,6 +855,10 @@
                 <Icon name="users" className="w-6 h-6" />
                 <span className="text-xs font-bold">우리의 숲</span>
               </button>
+              <button onClick={() => setPage('essay')} className={`flex flex-col items-center gap-1 transition-colors w-16 ${page === 'essay' ? 'text-yellow-500' : 'text-gray-500 hover:text-yellow-500'}`}>
+                <Icon name="fruit" className="w-6 h-6" />
+                <span className="text-xs font-bold">열매맺기</span>
+              </button>
             </div>
           </nav>
 
@@ -625,6 +872,23 @@
     }
 
     ReactDOM.createRoot(document.getElementById('root')).render(<App />);
+
+    // (선택) 런타임 오류 표시
+    window.addEventListener('error', (e) => {
+      const el = document.createElement('pre');
+      el.style.position = 'fixed';
+      el.style.bottom = '72px';
+      el.style.left = '8px';
+      el.style.right = '8px';
+      el.style.background = 'rgba(220,38,38,.1)';
+      el.style.color = '#991b1b';
+      el.style.padding = '8px';
+      el.style.borderRadius = '8px';
+      el.style.fontSize = '12px';
+      el.style.whiteSpace = 'pre-wrap';
+      el.textContent = 'Runtime error: ' + (e.error?.message || e.message);
+      document.body.appendChild(el);
+    });
   </script>
 </body>
 </html>
